log/build_2024-09-28_15-01-27/go_to_goal/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal/gtg.py", line 35
    if abs(curr_theta-route_theta)>0.01 """ and abs(dist>dist_tol)""" :
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

